# githooks-examples

./: .gitmessage  README.md  pyproject.toml
.hooks/: pre-commit  pre-push
test/: test_functions.py  test_samples.py
